# circuits

./: .gitignore  CMakeLists.txt  CircuitActive.cpp  Matrix.cpp  Matrix.h  Point.cpp  README.md  Wire.cpp  main.cpp  test_circuit.txt
.github/workflows/: cmake.yml
google_tests/: CMakeLists.txt  tests.cpp
src/: Circuit.cpp  Circuit.h  CircuitActive.cpp  CircuitActive.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Wire.cpp  Wire.h  main.cpp
tests/: CMakeLists.txt  TestAll.cpp  TestMatrix.cpp
tests/TB/: TestE2E.cpp  TestMatrix.cpp
tests/e2e/: e2e_ac_long.txt  e2e_ac_long1.txt  e2e_ac_tb1.txt  e2e_long.txt  e2e_long1.txt  e2e_tb1.txt  e2e_tb2.txt  e2e_tb3.txt  e2e_tb4.txt  e2e_tb4_loops.txt  e2e_tb5.txt  e2e_tb_invalid_parameters.txt  e2e_tb_loops.txt  e2e_tb_loops1.txt  e2e_tb_split.txt  test_circuit.txt
tests/env/: TestMain.h
